remove default content

--- a/data/config.yaml
+++ b/data/config.yaml
@@ -1,4 +1,4 @@
-name: Jacky Zhao
+name: Barış Kaya
 enableToc: true
 openToc: false
 enableLinkPreview: true
@@ -10,17 +10,16 @@ enableSPA: true
 enableFooter: true
 enableContextualBacklinks: true
 enableRecentNotes: false
-enableGitHubEdit: true
-GitHubLink: https://github.com/jackyzha0/quartz/tree/hugo/content
+enableGitHubEdit: false
+GitHubLink: https://github.com/boroskoyo/quartz/tree/hugo/content
 enableSemanticSearch: false
 operandApiKey: "REPLACE-WITH-YOUR-OPERAND-API-KEY"
 description:
-  Host your second brain and digital garden for free. Quartz features extremely fast full-text search,
-  Wikilink support, backlinks, local graph, tags, and link previews.
+  still in progress
 page_title:
-  "🪴 Quartz 3.3"
+  "boroskoyo.com"
 links:
   - link_name: Twitter
-    link: https://twitter.com/_jzhao
+    link: https://twitter.com/boroskoyo
   - link_name: Github
-    link: https://github.com/jackyzha0
+    link: https://github.com/boroskoyo
